--- a/src/racadauto/Consultar_ciudad.form
+++ b/src/racadauto/Consultar_ciudad.form
@@ -39,10 +39,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="525" max="32767" attributes="0"/>
-                              <Component id="jLabel1" min="-2" pref="125" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jLabel1" alignment="0" min="-2" pref="125" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="jLabel9" min="-2" pref="426" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
