--- a/src/racadauto/Modificar_contacto.form
+++ b/src/racadauto/Modificar_contacto.form
@@ -59,15 +59,17 @@
                           <Component id="RB_principal" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="JB_OK" min="-2" pref="75" max="-2" attributes="0"/>
-                              <EmptySpace pref="424" max="32767" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="LBL_estado" max="32767" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="JB_cancel" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="62" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jScrollPane1" min="-2" pref="572" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="52" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -92,10 +94,11 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="RB_principal" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="32" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="JB_OK" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="JB_OK" alignment="3" max="32767" attributes="0"/>
                   <Component id="JB_cancel" alignment="3" max="32767" attributes="0"/>
+                  <Component id="LBL_estado" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -184,6 +187,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Contacto Principal"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="LBL_estado">
     </Component>
   </SubComponents>
 </Form>
