--- a/src/racadauto/Principal.form
+++ b/src/racadauto/Principal.form
@@ -164,6 +164,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Nuevo Servicio"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem23ActionPerformed"/>
+                  </Events>
                 </MenuItem>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem24">
                   <Properties>
